fixed overlapping header

--- a/our-brothers-web/src/app/components/header/header.component.scss
+++ b/our-brothers-web/src/app/components/header/header.component.scss
@@ -178,6 +178,7 @@
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 10;
     width: 300px;
     height: 100%;
     flex-direction: column;
